[package]
name = "images-optimizer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2"
rayon = "1.8"
indicatif = "0.17"
humansize = "2"
tempfile = "3.8"
image = "0.24"
mozjpeg = "0.10.13"
webp = "0.2"        
ravif = "0.11"       
imgref = "1.9"       
rgb = "0.8"          
console = "0.16.2"
